@@ -153,6 +153,21 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_create" eval="True"/>
             <field name="perm_delete" eval="True"/>
         </record>
+        <record model="ir.model.access" id="access_ir_action_act_window_domain">
+            <field name="model" search="[('model', '=', 'ir.action.act_window.domain')]"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.model.access" id="access_ir_action_act_window_domain_admin">
+            <field name="model" search="[('model', '=', 'ir.action.act_window.domain')]"/>
+            <field name="group" ref="group_admin"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
         <record model="ir.model.access" id="access_ir_action_wizard">
             <field name="model" search="[('model', '=', 'ir.action.wizard')]"/>
             <field name="perm_read" eval="True"/>
